Better size for publishers cards on mobile and fix oauth links in modal and close menu on mobile.

--- a/web-client/app/styles/main.scss
+++ b/web-client/app/styles/main.scss
@@ -1006,8 +1006,8 @@ h1, h2, h3 {
 }
 
 .publishers-page .author-block {
-  width: 139px;
-  height: 139px;
+  width: 115px;
+  height: 115px;
 }
 
 .block {
